<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.assets.AddAsset">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_main"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="4dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/symbol_name"
            android:textSize="@dimen/big_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/assetName"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:text="@string/symbol"
            android:textSize="@dimen/big_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@id/textView"
            android:gravity="center"/>

        <EditText
            android:id="@+id/assetName"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:textSize="@dimen/big_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/textView"
            android:inputType="text"
            android:hint="@string/symbol_name"/>

        <Spinner
            android:id="@+id/spinnerCurrency"
            android:layout_width="0dp"
            android:layout_height="45dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/assetName"
            tools:entries="@array/currency"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:text="@string/save"
        android:layout_margin="4dp"
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="@dimen/medium_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_button"/>

    <Button
        android:text="@string/cancel"
        android:layout_margin="4dp"
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:textSize="@dimen/medium_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>