<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="?attr/colorOnPrimary"
    app:cardCornerRadius="10dip"
    android:layout_marginHorizontal="@dimen/big_horizontal_margin"
    android:layout_marginVertical="@dimen/big_vertical_margin">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/medium_horizontal_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/visible_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/big_vertical_margin">

            <TextView
                android:id="@+id/symbolName"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textSize="@dimen/big_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="BTC/USDT" />

            <androidx.legacy.widget.Space
                android:id="@+id/space"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                app:layout_constraintStart_toEndOf="@+id/symbolName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mainPrice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:textAlignment="textEnd"
                android:textSize="@dimen/big_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/space"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="38600.00" />

            <TextView
                android:id="@+id/symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text"
                app:layout_constraintTop_toBottomOf="@id/symbolName"
                app:layout_constraintStart_toStartOf="@id/symbolName"
                android:layout_marginTop="@dimen/small_vertical_margin"
                tools:text="BTC/USDT" />

            <TextView
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/small_text"
                app:layout_constraintTop_toBottomOf="@id/symbol"
                app:layout_constraintStart_toStartOf="@id/symbol"
                android:layout_marginTop="@dimen/small_vertical_margin"
                tools:text="https/ gegregreg/regregregreg" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/hidden_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_vertical_margin">

                <TextView
                    style="@style/card_layout_textViews"
                    android:text="@string/rub" />

                <TextView
                    android:id="@+id/price_rub"
                    style="@style/card_layout_textViews"
                    tools:text="655565465464564.6545" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_vertical_margin">

                <TextView
                    style="@style/card_layout_textViews"
                    android:text="@string/usd" />

                <TextView
                    android:id="@+id/price_usd"
                    style="@style/card_layout_textViews"
                    tools:text="655565465464564.6545" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_vertical_margin">

                <TextView
                    style="@style/card_layout_textViews"
                    android:text="@string/eur" />

                <TextView
                    android:id="@+id/price_eur"
                    style="@style/card_layout_textViews"
                    tools:text="655565465464564.6545" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_vertical_margin">

                <TextView
                    style="@style/card_layout_textViews"
                    android:text="@string/uah" />

                <TextView
                    android:id="@+id/price_uah"
                    style="@style/card_layout_textViews"
                    tools:text="655565465464564.6545" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/small_vertical_margin">

                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/delete"
                    style="@style/card_layout_buttons"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
