<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.assets.PageAssets"
    android:isScrollContainer="true"
    android:scrollbars="vertical"
    android:nestedScrollingEnabled="true">


            <LinearLayout
                android:id="@+id/usdLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/usd"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text" />

                <TextView
                    android:id="@+id/usd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text"
                    tools:text="1000" />

                <TextView
                    android:id="@+id/usdChange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text"
                    tools:text="+100$$$$$" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/rubLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/usdLinear">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rub"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text" />

                <TextView
                    android:id="@+id/rub"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text"
                    tools:text="1000" />

                <TextView
                    android:id="@+id/rubChange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text"
                    tools:text="+100$$$$$" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/eurLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/rubLinear">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/eur"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text" />

                <TextView
                    android:id="@+id/eur"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text"
                    tools:text="1000" />

                <TextView
                    android:id="@+id/eurChange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text"
                    tools:text="+100$$$$$" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/uahLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/eurLinear">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/uah"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text" />

                <TextView
                    android:id="@+id/uah"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text"
                    tools:text="1000" />

                <TextView
                    android:id="@+id/uahChange"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/big_text"
                    tools:text="+100$$$$$" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="8dp"
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/uahLinear" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:src="@drawable/ic_round_add_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/add" />
</androidx.constraintlayout.widget.ConstraintLayout>
